Sugati/src/objects/Airline_membership__c.object
<CustomObject>
    <fields>
        <fullName>AM_Airline__c</fullName>
        <label>Airline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Airline memberships</relationshipLabel>
        <relationshipName>Airline_memberships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AM_Member_Name__c</fullName>
        <label>Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_number__c</fullName>
        <label>Membership number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Airline membership</label>
    <nameField>
        <label>Airline Membership No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airline memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>